--- a/project2.html
+++ b/project2.html
@@ -102,7 +102,7 @@
       /* Figures */
 
       figure {
-        margin: 1em 0;
+        margin: 1em auto;
         padding: 0.5rem;
         margin-inline: -0.5em;
         border: 1px solid var(--color-neutral-80);
@@ -195,10 +195,11 @@
         <p>The decisions going into the project as a whole was harder than anticipated. There was a lot of trial and error with the data manipulations and having outcomes that would support the narrative I had in mind.
             Ideas I had in mind included considering the interactions between substantiated claims (text extraction) and promoted officers which didn't provide any notable data trends, substantiated claims share, and other text extractions that could be categorized.
             The idea for data manipulation when I saw the dataset was to include the external police brutality events into the timeline, and the complaints that had charges or arrests associated had trends that had some variation and can be manipulated to suit the narrative I wanted to push.
-
+        </p><p>
             Ethical analysis and visualization is based on data transparency and bias. It is easy to look for manipulated axes or biased chosen language that might be included in a graph. Colors and design are ways to subtlely shift the viewer's stance and where they are drawn to which can be powerful
             with a graph that can draw your attention in multiple directions.
-
+        </p>
+        <p>
             "Acceptable" persuasive choices are ones where there is transparency in any data transformations and a lack of language bias. If there is external data involved, it should have a direct correlation with the data being shown as a level of context, not to shift the narrative towards nonexistent trends.
             The choices of color, selectively choosing what data to extract from the dataset (text extraction), and how to add my bias into the visualization without anything outright misleading or manipulated involved trial-and-error to a level I didn't anticipate, but that did mean every choice made in the graphs was intentional and strategic.
         </p>
