--- a/project2.html
+++ b/project2.html
@@ -185,7 +185,7 @@
             <li><strong>De-emphasis of Negative Outcomes (-1):</strong> The “Taken Seriously” line is thinner, lighter, and less visually salient, which minimizes attention to the low rate of serious disciplinary action, softening negative impressions of NYPD oversight.</li>
             <li><strong>Event Selection (-2):</strong> The chosen timeline annotations selectively highlight moments following major reforms or public incidents that align with increases in exoneration rates. This selectively curated context promotes the idea of NYPD responsiveness without showing contradictory examples.</li>
             <li><strong>Annotations and Arrows (-2):</strong> Directional annotations emphasize areas of improvement or stability, directing the viewer’s eye toward segments that support the “improvement” narrative even when broader trends are ambiguous.</li>
-            <li><strong>Dropping 2020 Data (+2): Since the data was grouped by year received, 2020 only having three data points associated with it and being used as a share rate value would have output misleading results that would have been misrepresentative of the data.</strong></li>
+            <li><strong>Dropping 2020 Data (+2):</strong>Since the data was grouped by year received, 2020 only having three data points associated with it and being used as a share rate value would have output misleading results that would have been misrepresentative of the data.</li>
         </ul>
       </section>
 
