--- a/project2.html
+++ b/project2.html
@@ -104,7 +104,7 @@
       figure {
         margin: 1em auto;
         padding: 0.5rem;
-        margin-inline: -0.5em;
+        max-width: 90%;
         border: 1px solid var(--color-neutral-80);
         box-shadow: 0 0.1em 0.2em var(--color-neutral-95);
         text-align: center;
