--- a/project2.html
+++ b/project2.html
@@ -109,7 +109,11 @@
         box-shadow: 0 0.1em 0.2em var(--color-neutral-95);
         text-align: center;
         background: white;
-
+        >figure img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 6px;
+            }
         > figcaption {
           font: 500 75% var(--font-sans);
           background: var(--color-neutral-95);
