--- a/project2.html
+++ b/project2.html
@@ -109,11 +109,7 @@
         box-shadow: 0 0.1em 0.2em var(--color-neutral-95);
         text-align: center;
         background: white;
-        > figure img {
-            max-width: 50%;
-            height: auto;
-            border-radius: 4px;
-            }
+
         > figcaption {
           font: 500 75% var(--font-sans);
           background: var(--color-neutral-95);
@@ -140,6 +136,11 @@
           }
         }
       }
+        figure img {
+            max-width: 50%;
+            height: auto;
+            border-radius: 4px;
+            }
     </style>
   </head>
 
