--- a/project2.html
+++ b/project2.html
@@ -136,11 +136,13 @@
           }
         }
       }
-        figure img {
-            max-width: 50%;
-            height: auto;
-            border-radius: 4px;
-            }
+    figure img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 6px;
+        display: block;
+        margin: 0 auto;
+        }
     </style>
   </head>
 
@@ -197,7 +199,7 @@
       <section>
         <h2>Final Reflection</h2>
 
-        <p>The decisions going into the project as a whole was harder than anticipated. There was a lot of trial and error with the data manipulations and having outcomes that would support the narrative I had in mind.
+        <p>The decisions going into the project as a whole were harder than anticipated. There was a lot of trial and error with the data manipulations and having outcomes that would support the narrative I had in mind.
             Ideas I had in mind included considering the interactions between substantiated claims (text extraction) and promoted officers which didn't provide any notable data trends, substantiated claims share, and other text extractions that could be categorized.
             The idea for data manipulation when I saw the dataset was to include the external police brutality events into the timeline, and the complaints that had charges or arrests associated had trends that had some variation and can be manipulated to suit the narrative I wanted to push.
         </p><p>
